welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: not found: type j
      setCouleurBrosse(mot[j])
                           ^Array1:9: error: variable mot of type Array[java.awt.Color] does not take type parameters.
      setCouleurBrosse(mot[j])
                          ^